# OT2_group_project

./: .gitignore  README.md  Robot_differential_evolution.ipynb  pyproject.toml  requirements.txt  usage.rst
application/: automate.py  generated_script.py  main.ipynb  main.py  opentrons_script.py  opentrons_script_generator.py  opt_classes.py  opt_functions.py  ot2_protocol.py  values.npy  wellplate_classes.py
application/colour_experiment/: colours.py  get_colours.py
application/data/: input.csv  output.csv  values.npy
application/image_capture/: take_photo.py  webcam_crop.py
application/image_processing/: circle_detection.py
application/imgprocess/: blurry_well_detection.py  circle_detection.py  direct_wells.py  planB_interpolation.py
application/optimisation/: opt_functions.py
application/test/: get_colours.py  test_wellplates.py
concept_code/image_capture/: take_photo.py
concept_code/image_processing/: image_processing_concept.ipynb
concept_code/optimisation_examples/: optimisation_simulations.ipynb  pswarm.ipynb
docs/: basic_example.rst  conf.py  index.md  index.rst  installation.rst  introduction.rst  notes.rst  requirements.txt  usage.md  usage.rst
docs/_static/: custom.css
examples/: example_main.py  main.py
examples/PFK-example/: PFK-example.ipynb
optobot/: __init__.py  automate.py
test/: test_automate.py  test_colours.py  test_main.py
tests/: README.md  network_main_simulation.ipynb  simulate_ot2_script.py  simulated_outputs_ot2.ipynb  test_automate.py  test_colours.py  test_colours_network.py  test_main.py  test_network_main.py
(+52 files in other folders)
