[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "optobot"
version = "0.1.0"
description = "A package for automated experimental optimisation using an Opentrons OT-2 robot."
readme = "README.md"
authors = [
    { name = "Akthar" },
    { name = "Hanxuan" },
    { name = "Hodan" },
    { name = "Nicola" },
    { name = "Pavan" },
    { name = "Sebasitan" }
]
license = "MIT"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Computational Chemistry",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib==3.9.2",
    "numpy==1.26.4",
    "opencv-python==4.11.0.86",
    "opentrons==8.3.0",
    "pandas==2.2.3",
    "pyswarms==1.3.0",
    "scikit-optimize==0.10.2"
]

[project.urls]
Homepage = "https://github.com/nicolaegues/OptoBot"
